--- a/index.html
+++ b/index.html
@@ -440,8 +440,7 @@
         <div class="footer-subscribe">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="form-subscribe">
-            <label class="subscribe-label"
-              >Email
+            <label class="subscribe-label">
               <input
                 class="footer-input"
                 type="email"
@@ -525,22 +524,21 @@
             ></textarea>
           </div>
           <div class="chekbox">
-            <input
-              class="policy-input visually-hidden"
-              type="checkbox"
-              id="user-privacy"
-              value="true"
-              name="user-privacy"
-            />
-            <label class="policy" for="user-privacy"
-              >I accept the terms and conditions of the
+            <label class="policy" for="user-privacy">
+              <input
+                class="policy-input visually-hidden"
+                type="checkbox"
+                id="user-privacy"
+                value="true"
+                name="user-privacy"
+              />
               <svg class="modal-icon-span" width="10" height="8">
                 <use href="./images/icons.svg#icon-galochka"></use>
               </svg>
+              I accept the terms and conditions of the
+              <a class="link-policy">Privacy Policy</a>
 
               <span class="policy-span"> </span>
-
-              <a class="link-policy">Privacy Policy</a>
             </label>
           </div>
           <button class="btn-send" type="button">Send</button>
