--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <div class="modal-overlay">
       <div class="modal">
         <button class="btn-modal" type="button">
-          <svg class="" width="8" height="8">
+          <svg class="icon-close-modal" width="8" height="8">
             <use href="./images/icons.svg#icon-close-new"></use>
           </svg>
         </button>
@@ -524,23 +524,23 @@
             ></textarea>
           </div>
           <div class="chekbox">
+            <input
+              class="policy-input visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+            />
             <label class="policy" for="user-privacy">
-              <svg class="modal-icon-span" width="10" height="8">
-                <use href="./images/icons.svg#icon-galochka"></use>
-              </svg>
-              <input
-                class="policy-input visually-hidden"
-                type="checkbox"
-                id="user-privacy"
-                value="true"
-                name="user-privacy"
-              />
-              <span class="policy-span"> </span>
               I accept the terms and conditions of the
+
+              <span class="policy-span">
+                <svg class="modal-icon-span" width="10" height="8">
+                  <use href="./images/icons.svg#icon-galochka"></use>
+                </svg>
+              </span>
+
               <a class="link-policy">Privacy Policy</a>
-              <!-- <svg class="modal-icon-span" width="10" height="8">
-                <use href="./images/icons.svg#icon-galochka"></use>
-              </svg> -->
             </label>
           </div>
           <button class="btn-send" type="button">Send</button>
